--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ buildscript {
 
         //unit test
         junit_version = '4.13.2'
+        robolectric_version = '4.4'
+        mockito_version = '2.22.0'
+        powermock_version = '2.0.9'
 
         //android test
         junit_etx_version = '1.1.5'
