--- a/data/build.gradle
+++ b/data/build.gradle
@@ -36,4 +36,5 @@ dependencies {
 
     // Unit test
     testImplementation "junit:junit:$junit_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
 }
