--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ buildscript {
         orbit_version = '6.0.0'
 
         //unit test
+        coroutine_test_version = '1.7.1'
+        mockk_version = '1.9.3'
         junit_version = '4.13.2'
         robolectric_version = '4.4'
         mockito_version = '2.22.0'
