--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -39,5 +39,5 @@ dependencies {
 
     // Unit test
     testImplementation "junit:junit:$junit_version"
-    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
 }
