--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     //Compose
     implementation "androidx.activity:activity-compose:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material:$compose_ui_version"
 
@@ -89,5 +90,4 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$junit_etx_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     androidTestImplementation 'androidx.test:rules:1.5.0'
-
 }
